# cnn-classifier-project

./: LICENSE  README.md  init_setup.sh  params.yaml  pyproject.toml  requirements_dev.txt  requiremetns.txt  requiremetns_dev.txt  setup.cfg  setup.py  template.py  tox.ini
configs/: config.yaml
research/: data_ingestion.ipynb  trials.ipynb
src/CNNClassifier/components/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_train.py  stage_04_evaluation.py
src/CNNClassifier/config/: configuration.py
src/CNNClassifier/constants/: __init__.py
src/CNNClassifier/entity/: config_entity.py
src/CNNClassifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py
src/CNNClassifier/utils/: __init__.py  utils.py
