[metadata]
license = MIT
license_file = LICENSE
classifier=
    Programming Language :: Python ::3.8
    Operating System :: OS Independent

[options]
install_requires=
     ensure==1.0.2
python_requires= >= 3.7

[options.extras_require]

testing =
#pytest use for testing in local purpose unit and integration testing in local
    pytest>=7.1.3
    #mypy use for if error in our code its detect
    #flake8 and black use for code standing and formatting
    #tox also use for testing
    mypy>=0.971
    flake8>5.0.4
    tox>=3.25.1
    black>=22.8.0

[options.package_data]
deepClassifier = py.typed

[flake8]
max-line-length=1609
exclude = __init__.py